--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:playwright": "playwright test",
     "test:jest": "jest",
     "build": "next build",
+    "postbuild": "next-sitemap --config next-sitemap.config.js",
     "start": "next start"
   },
   "dependencies": {
@@ -16,6 +17,7 @@
     "clsx": "^2.1.1",
     "next": "^14.2.4",
     "next-intl": "^3.0.0",
+    "next-sitemap": "^4.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
